fix thin black bar between main message window and sidebar when using alignedchatbox and borderless

--- a/discord/Borderless.css
+++ b/discord/Borderless.css
@@ -1,7 +1,7 @@
 /**
 * @name Borderless
 * @author CodeF53
-* @version 1.0
+* @version 1.1
 * @description removes all borders making for a sharper look
 */
 
@@ -12,4 +12,7 @@
   --border-normal: transparent;
   --border-strong: transparent;
   --border-subtle: transparent;
+}
+div[class^=content_] > div[class^=page_] {
+  border-left: none;
 }
